added themeColor to Room + color picker

--- a/views/forms/room.hbs
+++ b/views/forms/room.hbs
@@ -2,5 +2,6 @@
     Name: <br><input type="text" name="name" /><br>
     Description: <br><textarea name="description"></textarea><br>
     Difficulty (1-3): <br><input type="number" name="difficulty" /><br>
+    Color:   <br><input type="color" name="themeColor" value="#ff0000"><br>
     <input type="submit" value="Submit" />
 </form>
